Add transaction confirmation trigger
Signed-off-by: Javier Roman <javier.rmgz@gmail.com>