@@ -1,172 +1,121 @@
 package io.librevents.application.node.trigger.disposable.block;
 
-import java.math.BigInteger;
-import java.util.List;
-import java.util.Set;
-import java.util.UUID;
-
 import io.librevents.application.node.dispatch.Dispatcher;
 import io.librevents.application.node.trigger.Trigger;
 import io.librevents.domain.common.ContractEventStatus;
 import io.librevents.domain.common.EventName;
 import io.librevents.domain.common.NonNegativeBlockNumber;
-import io.librevents.domain.event.Event;
 import io.librevents.domain.event.block.BlockEvent;
 import io.librevents.domain.event.contract.ContractEvent;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+
+import java.math.BigInteger;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
+@ExtendWith(MockitoExtension.class)
 class ContractEventConfirmationDisposableTriggerTest {
 
-    private static Event eventReceived;
+    @Mock
+    private Dispatcher dispatcher;
 
-    private static class MockDispatcher implements Dispatcher {
+    private ContractEventConfirmationDisposableTrigger trigger;
+    private ContractEvent contractEvent;
+    private BigInteger requiredConfirmations;
 
-        @Override
-        public void addTrigger(Trigger<?> trigger) {}
-
-        @Override
-        public void removeTrigger(Trigger<?> trigger) {}
-
-        @Override
-        public void dispatch(Event event) {
-            eventReceived = event;
-        }
+    @BeforeEach
+    void setUp() {
+        // initialize a sample ContractEvent with UNCONFIRMED status
+        contractEvent = new ContractEvent(
+            java.util.UUID.randomUUID(),
+            new EventName("testEvent"),
+            Set.of(),
+            "0xabc", // from
+            BigInteger.ZERO,
+            BigInteger.ZERO,
+            "0xdef", // contract address
+            "0xowner", // owner
+            "0xspender", // spender
+            ContractEventStatus.UNCONFIRMED,
+            BigInteger.ZERO // original block
+        );
+        requiredConfirmations = BigInteger.valueOf(5);
+        trigger = new ContractEventConfirmationDisposableTrigger(
+            contractEvent,
+            requiredConfirmations,
+            dispatcher
+        );
     }
 
     @Test
-    void testTrigger() {
-        Dispatcher dispatcher = new MockDispatcher();
-        ContractEvent contractEvent =
-                new ContractEvent(
-                        UUID.randomUUID(),
-                        new EventName("test"),
-                        Set.of(),
-                        "0x1234567890abcdef",
-                        BigInteger.ZERO,
-                        BigInteger.ZERO,
-                        "0xabcdef1234567890",
-                        "0xabcdef1234567890",
-                        "0xabcdef1234567890",
-                        ContractEventStatus.UNCONFIRMED,
-                        BigInteger.ZERO);
-        BlockEvent blockEvent =
-                new BlockEvent(
-                        UUID.randomUUID(),
-                        new NonNegativeBlockNumber(BigInteger.valueOf(5)),
-                        "0xabcdef1234567890",
-                        "0xabcdef1234567890",
-                        BigInteger.ZERO,
-                        BigInteger.ZERO,
-                        BigInteger.ZERO,
-                        BigInteger.ZERO,
-                        List.of());
+    void trigger_onOrAfterRequiredBlock_dispatchesConfirmedEvent() {
+        // block number equal to required confirmations
+        BlockEvent blockEvent = new BlockEvent(
+            java.util.UUID.randomUUID(),
+            new NonNegativeBlockNumber(requiredConfirmations),
+            "0xblockHash", // hash
+            "0xparentHash", // parent
+            BigInteger.ZERO, BigInteger.ZERO, BigInteger.ZERO, BigInteger.ZERO,
+            java.util.Collections.emptyList()
+        );
 
-        ContractEventConfirmationDisposableTrigger trigger =
-                new ContractEventConfirmationDisposableTrigger(
-                        contractEvent, BigInteger.valueOf(5), dispatcher);
+        trigger.trigger(blockEvent);
 
-        assertDoesNotThrow(() -> trigger.trigger(blockEvent));
-        assertTrue(eventReceived instanceof ContractEvent);
-        assertSame(ContractEventStatus.CONFIRMED, ((ContractEvent) eventReceived).getStatus());
+        ArgumentCaptor<ContractEvent> captor = ArgumentCaptor.forClass(ContractEvent.class);
+        verify(dispatcher).dispatch(captor.capture());
+        ContractEvent dispatched = captor.getValue();
+        assertNotNull(dispatched);
+        assertEquals(ContractEventStatus.CONFIRMED, dispatched.getStatus());
+        assertEquals(contractEvent.getBlockHash(), dispatched.getBlockHash());
     }
 
     @Test
-    void testTriggerWithoutValidBlock() {
-        Dispatcher dispatcher = new MockDispatcher();
-        ContractEvent contractEvent =
-                new ContractEvent(
-                        UUID.randomUUID(),
-                        new EventName("test"),
-                        Set.of(),
-                        "0x1234567890abcdef",
-                        BigInteger.ZERO,
-                        BigInteger.ZERO,
-                        "0xabcdef1234567890",
-                        "0xabcdef1234567890",
-                        "0xabcdef1234567890",
-                        ContractEventStatus.UNCONFIRMED,
-                        BigInteger.ZERO);
-        BlockEvent blockEvent =
-                new BlockEvent(
-                        UUID.randomUUID(),
-                        new NonNegativeBlockNumber(BigInteger.valueOf(3)),
-                        "0xabcdef1234567890",
-                        "0xabcdef1234567890",
-                        BigInteger.ZERO,
-                        BigInteger.ZERO,
-                        BigInteger.ZERO,
-                        BigInteger.ZERO,
-                        List.of());
+    void trigger_beforeRequiredBlock_doesNotDispatch() {
+        // block number less than required confirmations
+        BlockEvent blockEvent = new BlockEvent(
+            java.util.UUID.randomUUID(),
+            new NonNegativeBlockNumber(requiredConfirmations.subtract(BigInteger.ONE)),
+            "0xblockHash",
+            "0xparentHash",
+            BigInteger.ZERO, BigInteger.ZERO, BigInteger.ZERO, BigInteger.ZERO,
+            java.util.Collections.emptyList()
+        );
 
-        ContractEventConfirmationDisposableTrigger trigger =
-                new ContractEventConfirmationDisposableTrigger(
-                        contractEvent, BigInteger.valueOf(5), dispatcher);
+        trigger.trigger(blockEvent);
 
-        assertDoesNotThrow(() -> trigger.trigger(blockEvent));
+        verify(dispatcher, never()).dispatch(any());
     }
 
     @Test
-    void testOnDispose() {
-        Dispatcher dispatcher = new MockDispatcher();
-        ContractEvent contractEvent =
-                new ContractEvent(
-                        UUID.randomUUID(),
-                        new EventName("test"),
-                        Set.of(),
-                        "0x1234567890abcdef",
-                        BigInteger.ZERO,
-                        BigInteger.ZERO,
-                        "0xabcdef1234567890",
-                        "0xabcdef1234567890",
-                        "0xabcdef1234567890",
-                        ContractEventStatus.UNCONFIRMED,
-                        BigInteger.ZERO);
-
-        ContractEventConfirmationDisposableTrigger trigger =
-                new ContractEventConfirmationDisposableTrigger(
-                        contractEvent, BigInteger.valueOf(5), dispatcher);
-
-        assertDoesNotThrow(
-                () -> {
-                    trigger.onDispose(blockEvent -> {});
-                });
+    void onDispose_registrationDoesNotThrow() {
+        // verify onDispose accepts a consumer
+        assertDoesNotThrow(() ->
+            trigger.onDispose(evt -> {
+                // no-op consumer
+            })
+        );
     }
 
     @Test
-    void testSupports() {
-        Dispatcher dispatcher = new MockDispatcher();
-        ContractEvent contractEvent =
-                new ContractEvent(
-                        UUID.randomUUID(),
-                        new EventName("test"),
-                        Set.of(),
-                        "0x1234567890abcdef",
-                        BigInteger.ZERO,
-                        BigInteger.ZERO,
-                        "0xabcdef1234567890",
-                        "0xabcdef1234567890",
-                        "0xabcdef1234567890",
-                        ContractEventStatus.UNCONFIRMED,
-                        BigInteger.ZERO);
+    void supports_onlySupportsBlockEvent() {
+        BlockEvent blockEvent = new BlockEvent(
+            java.util.UUID.randomUUID(),
+            new NonNegativeBlockNumber(requiredConfirmations),
+            "h", "p", BigInteger.ZERO, BigInteger.ZERO, BigInteger.ZERO, BigInteger.ZERO,
+            java.util.Collections.emptyList()
+        );
+        assertTrue(trigger.supports(blockEvent));
 
-        ContractEventConfirmationDisposableTrigger trigger =
-                new ContractEventConfirmationDisposableTrigger(
-                        contractEvent, BigInteger.valueOf(5), dispatcher);
-
-        assertTrue(trigger.supports(contractEvent));
-        assertFalse(
-                trigger.supports(
-                        new BlockEvent(
-                                UUID.randomUUID(),
-                                new NonNegativeBlockNumber(BigInteger.valueOf(5)),
-                                "0xabcdef1234567890",
-                                "0xabcdef1234567890",
-                                BigInteger.ZERO,
-                                BigInteger.ZERO,
-                                BigInteger.ZERO,
-                                BigInteger.ZERO,
-                                List.of())));
+        // does not support other event types
+        Trigger<?> generic = trigger;
+        ContractEvent otherEvent = contractEvent;
+        assertFalse(trigger.supports(otherEvent));
     }
 }
